Setup initial chat backend. Upload gps co-ordinates alongside image, as Safari browser strips exif info on image upload.

--- a/docker-compose.override.yml
+++ b/docker-compose.override.yml
@@ -34,6 +34,10 @@ services:
 #  php_fpm_debug:
 #    env_file:
 #      - env_local_dev.env
+
+  php_websocket:
+    ports:
+      - "8015:5000"
   redis:
     ports:
       - "6379:6379"
