--- a/app/package.json
+++ b/app/package.json
@@ -15,7 +15,6 @@
     "js:build:prod": "webpack --mode production",
     "js:build:prod:analyze": "webpack --mode production --profile --json=stats.json",
     "js:build:prod:watch": "webpack --watch --mode production",
-
     "sass:build:dev": "sass public/scss/site.scss public/css/site.css",
     "sass:build:prod": "sass public/scss/site.scss public/css/site.css --style=compressed",
     "sass:build:watch": "sass public/scss/site.scss public/css/site.css --watch"
@@ -32,6 +31,7 @@
     "url": "git://github.com/Danack/Bristolian.git"
   },
   "dependencies": {
+    "exifr": "^7.1.3",
     "preact": "^10.11.3"
   },
   "devDependencies": {
