--- a/app/package.json
+++ b/app/package.json
@@ -39,6 +39,7 @@
     "compression-webpack-plugin": "^10.0.0",
     "css-loader": "^6.7.2",
     "jest": "^29.3.1",
+    "jest-environment-jsdom": "^30.2.0",
     "raw-loader": "^4.0.2",
     "sass": "^1.56.1",
     "script-loader": "^0.7.2",
