--- a/composer.json
+++ b/composer.json
@@ -77,6 +77,7 @@
         },
         "files": [
             "src/functions.php",
+            "src/functions_common.php",
             "src/functions_exif.php"
         ]
     },
