--- a/containers/supervisord/tasks/php_queue_email_send.conf
+++ b/containers/supervisord/tasks/php_queue_email_send.conf
@@ -15,6 +15,6 @@ log_stdout=true             ; if true, log program stdout (default true)
 log_stderr=true             ; if true, log program stderr (def false)
 
 
-stdout_logfile=/dev/fd/1
-stdout_logfile_maxbytes=0
-redirect_stderr=true
+;stdout_logfile=/dev/fd/1
+;stdout_logfile_maxbytes=0
+;redirect_stderr=true
