Random commit. Includes making sure all containers shut down quickly after receiving SIGINT signals.

--- a/containers/caddy/Dockerfile
+++ b/containers/caddy/Dockerfile
@@ -3,4 +3,4 @@ FROM caddy:latest
 # Make the default directory be the useful one
 WORKDIR /var/app
 
-CMD sh /var/app/containers/caddy/entrypoint.sh
+CMD ["sh", "/var/app/containers/caddy/entrypoint.sh"]
