--- a/containers/js_builder/Dockerfile
+++ b/containers/js_builder/Dockerfile
@@ -10,7 +10,7 @@ RUN apt-get update -qq && DEBIAN_FRONTEND=noninteractive apt-get install -y git
 
 # CMD tail -f /var/app/containers/js_builder/README_npm.md
 
-CMD sh /var/app/containers/js_builder/entrypoint.sh
+CMD ["sh", "/var/app/containers/js_builder/entrypoint.sh"]
 
 
 # CMD npm run js:build:dev:watch
