--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,7 @@
         "danack/php-unit-helper": "^0.5.0",
         "danack/json-safe": "^0.1.1",
         "danack/slim-dispatcher": "dev-dev",
-        "danack/datatype": "0.6.2",
+        "danack/datatype": "0.6.3",
         "dmore/chrome-mink-driver": "2.8.1",
         "hashids/hashids": "5.0.2",
         "ext-redis": "*",
@@ -52,7 +52,9 @@
         "ircmaxell/random-lib": "^1.1.0",
         "ext-openssl": "*",
         "ext-mbstring": "*",
-        "ext-exif": "*"
+        "ext-exif": "*",
+        "ext-libxml": "*",
+        "ext-dom": "*"
     },
     "require-dev": {
         "danack/coding-standard": "0.3.0",
