--- a/containers/sass_dev_builder/Dockerfile
+++ b/containers/sass_dev_builder/Dockerfile
@@ -5,6 +5,6 @@ WORKDIR /var/app
 
 # RUN apt-get update -qq && DEBIAN_FRONTEND=noninteractive apt-get install -y git
 
-CMD sh /var/app/containers/sass_dev_builder/entrypoint.sh
+CMD ["sh", "/var/app/containers/sass_dev_builder/entrypoint.sh"]
 
 # CMD tail -f /var/app/containers/npm/README_npm.md
