Add setting the terminal title to allow focusing the window for accessibility reasons.

--- a/containers/php_fpm/Dockerfile
+++ b/containers/php_fpm/Dockerfile
@@ -64,6 +64,9 @@ RUN usermod -u 1000 www-data
 
 RUN echo 'alias cli="php cli.php"' >> ~/.bashrc
 
-# CMD sh /var/app/containers/php_fpm/entrypoint.sh
+# We set the title of the terminal window.
+COPY iterm-title.sh /usr/local/bin/iterm-title.sh
+RUN chmod +x /usr/local/bin/iterm-title.sh
+RUN echo 'source /usr/local/bin/iterm-title.sh' >> ~/.bashrc
 
 CMD ["sh", "/var/app/containers/php_fpm/entrypoint.sh"]
