Update to tagged version of danack/injector.

--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,7 @@
         "danack/configurator": "1.1.1",
         "danack/console": "^2.6.3",
         "danack/esprintf": "^2.0.0",
-        "danack/injector": "dev-static-factories-are-nice",
+        "danack/injector": "0.9.0",
         "danack/looping-exec": "^0.3.0",
         "danack/php-unit-helper": "^0.5.0",
         "danack/json-safe": "^0.1.1",
