--- a/containers/php_websocket/Dockerfile
+++ b/containers/php_websocket/Dockerfile
@@ -36,4 +36,6 @@ RUN usermod -u 1000 www-data
 
 RUN echo 'alias cli="php cli.php"' >> ~/.bashrc
 
-CMD ["sh", "/var/app/containers/php_websocket/entrypoint.sh"]
+# CMD ["sh", "/var/app/containers/php_websocket/entrypoint.sh"]
+
+CMD tail -f /var/app/containers/php_websocket/readme.MD
