fixing things from the large class renaming/cleanup to have all db tables generated.

--- a/composer.json
+++ b/composer.json
@@ -84,7 +84,8 @@
         "files": [
             "src/functions.php",
             "src/functions_common.php",
-            "src/functions_exif.php"
+            "src/functions_exif.php",
+            "src/functions_tinned_fish.php"
         ]
     },
     "autoload-dev": {
