Allow showing and editing of meme text in front end.
Also allow setting memes to be dead.

--- a/containers/supervisord/Dockerfile
+++ b/containers/supervisord/Dockerfile
@@ -31,7 +31,8 @@ RUN pip install --no-cache-dir easyocr
 
 #  pre-download models at build time
 #  (avoids first-run network access)
-RUN sh /var/app/containers/supervisord/easyocr_install.sh
+COPY easyocr_install.sh /tmp/easyocr_install.sh
+RUN sh /tmp/easyocr_install.sh
 
 WORKDIR /var/app
 
