--- a/.gitignore
+++ b/.gitignore
@@ -24,9 +24,6 @@ swagger
 site.css.gz
 app/womens_coin
 university_road
-/app/public/tsx/generated/constants.tsx
-/app/public/tsx/generated/types.tsx
-/src/Bristolian/Database/*.php
 composer_oauth_token.txt
 app/public/pdfjs-4.9.155-dist
 scripts/bcc_files_2025_07_25
@@ -40,4 +37,10 @@ test_update.sh
 this_is_prod.txt
 scripts/avatar
 screenshot
+
+# Generated files
+/app/public/tsx/generated/constants.tsx
+/app/public/tsx/generated/types.tsx
+/src/Bristolian/Database/*.php
 src/Bristolian/Model/Generated
+src/Bristolian/Response/Typed
