--- a/containers/php_fpm/Dockerfile
+++ b/containers/php_fpm/Dockerfile
@@ -19,7 +19,7 @@ RUN  apt-get update -qq && \
      DEBIAN_FRONTEND=noninteractive apt-get install --no-install-recommends -y \
      php8.2 php8.2-common php8.2-cli php8.2-fpm php8.2-dev \
      php8.2-mysql php8.2-curl php8.2-imagick php8.2-xml php8.2-mbstring \
-     php8.2-intl php8.2-redis php8.2-zip \
+     php8.2-intl php8.2-redis php8.2-zip php8.2-pcov \
      build-essential make gcc g++
 
 WORKDIR /tmp
@@ -49,7 +49,7 @@ RUN  apt-get update -qq && \
      DEBIAN_FRONTEND=noninteractive apt-get install --no-install-recommends -y \
      php8.2 php8.2-common php8.2-cli php8.2-fpm \
      php8.2-mysql php8.2-curl php8.2-imagick php8.2-xml php8.2-mbstring \
-     php8.2-intl php8.2-redis php8.2-zip
+     php8.2-intl php8.2-redis php8.2-zip php8.2-pcov
 
 WORKDIR /var/app
 
