Differentiate debug window

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -112,6 +112,7 @@ services:
     environment:
       - COMPOSER_CACHE_DIR=/var/app/var/cache/composer
       - COMPOSER_ALLOW_SUPERUSER=1
+      - ITERM_TITLE=bristolian php-debug
       - PHP_IDE_CONFIG=serverName=BRISTOLIAN_DEBUG
       - BRISTOLIAN_HOST_PATH=${BRISTOLIAN_HOST_PATH}
     depends_on:
