Tests are now all passing, though some are disabled.

--- a/containers/mysql/config/my.cnf
+++ b/containers/mysql/config/my.cnf
@@ -18,6 +18,9 @@ character-set-server = utf8mb4
 collation-server = utf8mb4_unicode_ci
 default_authentication_plugin=mysql_native_password
 
+# Unit tests have suddenly started failing with "too many connections"
+max_connections = 5000
+MAX_USER_CONNECTIONS = 300
 
 authentication_policy = 'caching_sha2_password, sha256_password'
 
