Attempt to re-enable supervisor for image ocr.

--- a/containers/supervisord/Dockerfile
+++ b/containers/supervisord/Dockerfile
@@ -41,6 +41,6 @@ RUN mkdir -p /var/log/supervisor
 #COPY supervisord.conf /etc/supervisor/supervisord.conf
 #COPY tasks/*.conf /etc/supervisor/conf.d/
 
-CMD tail -f /var/app/containers/supervisord/README.md
-#CMD sh /var/app/containers/supervisord/entrypoint.sh
+# CMD tail -f /var/app/containers/supervisord/README.md
+CMD sh /var/app/containers/supervisord/entrypoint.sh
 
